Add Skype and Email logos for footer

--- a/themes/persona_free-override/partials/footer.hbs
+++ b/themes/persona_free-override/partials/footer.hbs
@@ -23,9 +23,7 @@
                      href="mailto:{{@config.custom.socialEmail}}"
                      aria-label="Email"
                      class="email">
-                     <svg>
-                        <use xlink:href="{{@website.assetsUrl}}/svg/svg-map-ext.svg#email"/>
-                     </svg>
+                     <img src="{{@website.assetsUrl}}/svg/mail-142.svg" width="16" height="16"/>
                   </a>
                {{/if}}
                {{#if @config.custom.socialSkype}}
@@ -33,9 +31,7 @@
                      href="skype:{{@config.custom.socialSkype}}"
                      aria-label="Skype"
                      class="skype">
-                     <svg>
-                        <use xlink:href="{{@website.assetsUrl}}/svg/svg-map-ext.svg#skype"/>
-                     </svg>
+                     <img src="{{@website.assetsUrl}}/svg/Microsoft_Skype_for_Business_logo.svg" width="16" height="16"/>
                   </a>
                {{/if}}
                {{#if @config.custom.socialFacebook}}
